force-app/main/default/objects/C360AuthSetting__mdt/C360AuthSetting__mdt.object-meta.xml
<CustomObject>
    <description>This custom setting will store all parameters to connect to salesforce vis Apex</description>
    <label>C360AuthSetting</label>
    <pluralLabel>C360AuthSettings</pluralLabel>
</CustomObject>