force-app/main/default/objects/C360AuthSetting__mdt/fields/jwt_aud__c.field-meta.xml
<CustomField>
    <fullName>jwt_aud__c</fullName>
    <label>jwt_aud</label>
    <length>100</length>
    <type>Text</type>
</CustomField>