force-app/main/default/objects/C360AuthSetting__mdt/fields/jwt_exp__c.field-meta.xml
<CustomField>
    <fullName>jwt_exp__c</fullName>
    <label>jwt_exp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>