force-app/main/default/objects/C360AuthSetting__mdt/fields/jwt_iss__c.field-meta.xml
<CustomField>
    <fullName>jwt_iss__c</fullName>
    <label>jwt_iss</label>
    <length>100</length>
    <type>Text</type>
</CustomField>