force-app/main/default/objects/C360AuthSetting__mdt/fields/jwt_sub__c.field-meta.xml
<CustomField>
    <fullName>jwt_sub__c</fullName>
    <label>jwt_sub</label>
    <length>100</length>
    <type>Text</type>
</CustomField>