force-app/main/default/objects/C360AuthSetting__mdt/fields/key__c.field-meta.xml
<CustomField>
    <fullName>key__c</fullName>
    <label>key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>