force-app/main/default/objects/C360AuthSetting__mdt/fields/token_endpoint__c.field-meta.xml
<CustomField>
    <fullName>token_endpoint__c</fullName>
    <label>token_endpoint</label>
    <length>200</length>
    <type>Text</type>
</CustomField>